# homelab_setup

./: .gitignore  LICENSE  README.md  base_docker.yml  base_setup.yml  base_vm.yml  pyproject.toml
group_vars/: all.yml
host_vars/: base.yml  localhost.yml
host_vars/base/: vars.yml
host_vars/base.home/: vars.yml
inventory/: main.yml
roles/add_backports/handlers/: main.yml
roles/add_backports/meta/: main.yml
roles/add_backports/tasks/: debian.yml  main.yml
roles/cockpit_setup/defaults/: main.yml
roles/cockpit_setup/meta/: main.yml
roles/cockpit_setup/tasks/: debian.yml  main.yml
roles/ddns_setup/meta/: main.yml
roles/ddns_setup/tasks/: debian.yml  main.yml
roles/ddns_setup/templates/: ddns.sh.j2
roles/docker_setup/meta/: main.yml
roles/docker_setup/tasks/: debian.yml  main.yml
roles/docker_setup/templates/: daemon.json.j2
roles/guac_setup/defaults/: main.yml
roles/guac_setup/handlers/: main.yml
roles/guac_setup/meta/: main.yml
roles/guac_setup/tasks/: debian.yml  main.yml
roles/guac_setup/templates/: compose.yml.j2
roles/media_setup/defaults/: main.yml
roles/media_setup/meta/: main.yml
roles/media_setup/tasks/: debian.yml  main.yml
roles/media_setup/templates/: compose.yml.j2
roles/no_log_compress/meta/: main.yml
roles/no_log_compress/tasks/: debian.yml  main.yml
roles/restic_setup/meta/: main.yml
roles/restic_setup/tasks/: debian.yml  main.yml
roles/restic_setup/templates/: backup.sh.j2  rclone.conf.j2
roles/samba_setup/meta/: main.yml
roles/samba_setup/tasks/: debian.yml  main.yml
roles/udev/meta/: main.yml
(+48 files in other folders)
